<?xml version="1.0"?>
<package format="2">
  <name>octomap_merge</name>
  <version>0.1.0</version>
  <description>The octomap_merge package</description>

  <maintainer email="kyle.harlow@colorado.edu">Kyle Harlow</maintainer>

  <license>TODO</license>

  <url type="website">https://www.github.com/Alphakyl/octomap_merge</url>
  
	<author email="kyle.harlow@colorado.edu">Kyle Harlow</author>

  <buildtool_depend>catkin</buildtool_depend>
	
  <build_depend>octomap_ros</build_depend>
	<build_depend>octomap_msgs</build_depend>
	<build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	
  <build_export_depend>octomap_ros</build_export_depend>
  <build_export_depend>octomap_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
	<exec_depend>octomap_ros</exec_depend>
	<exec_depend>octomap_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
